# productivityApp

./: .gitignore
backend/: pyproject.toml
iOS/productivityApp/: ContentView.swift  Item.swift  productivityAppApp.swift
iOS/productivityAppTests/: productivityAppTests.swift
iOS/productivityAppUITests/: productivityAppUITests.swift  productivityAppUITestsLaunchTests.swift
terraform/: .terraform.lock.hcl  mongo.tf  provider.tf  variables.tf  versions.tf
