[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Sebastian Ozimkowski <sebastian.ozimkowski@eond.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.60.0"
pydantic = "^2.5.3"
motor = "^3.3.2"
mypy = "^1.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
grpcio-tools = "^1.60.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
